style: minor style changes

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,5 +1,5 @@
 @use "./global";
 @use "./components/btn";
 @use "./components/card";
-@use "./components/formInput";
+@use "./components/inputField";
 @use "./components/link";
