refactor: change class name to comply with BEM methodology

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,5 +1,5 @@
 @use "./global";
 @use "./components/btn";
 @use "./components/card";
-@use "./components/inputField";
+@use "./components/form";
 @use "./components/link";
