--- a/src/sass/components/_btn.scss
+++ b/src/sass/components/_btn.scss
@@ -22,6 +22,8 @@
 
 .btn--dashboard {
     background: colors.$secondary;
+    padding: 1em 2em;
+    text-decoration: none;
 }
 
 .btn--dashboard:hover {
