--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -2,11 +2,15 @@
 
 .card {
     background-color: colors.$primary;
-    width: 430px;
-    height: 530px;
+    width: 300px;
+    height: 500px;
     margin: 0 auto;
     transform: translateY(16%);
     box-shadow: 0px 8px 20px 6px rgba(0, 0, 0, 0.3);
     border-radius: 20px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
