--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -6,8 +6,20 @@
     box-sizing: border-box;
 }
 
-body {
+#app {
+    position: absolute;
+    width: 375px;
+    height: 720px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
     background-color: colors.$secondary;
+
+    border: 10px solid black;
+    border-radius: 20px;
+}
+
+body {
     font-family: 'Maven Pro', sans-serif;
 }
 
@@ -15,10 +27,14 @@ h1 {
     color: colors.$contrast;
     text-align: center;
     font-family: 'Maven Pro', sans-serif;
-    padding: 3em 0 1em 0;
+    padding: 0 0 1em 0;
 }
 
 form {
     width: 240px;
     margin: 0 auto;
+}
+
+p {
+    color: colors.$contrast;
 }
