--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -30,6 +30,21 @@ h1 {
     padding: 0 0 1em 0;
 }
 
+h2 {
+    color: colors.$contrast;
+    text-align: center;
+    font-family: 'Maven Pro', sans-serif;
+    font-size: 1.2em;
+}
+
+h3 {
+    color: colors.$contrast;
+    text-align: center;
+    font-family: 'Maven Pro', sans-serif;
+    font-weight: 500;
+    font-size: 1em;
+}
+
 form {
     width: 240px;
     margin: 0 auto;
