feat: add bottom navigation to corresponding pages + minor style class changes

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -2,5 +2,5 @@
 @use "./components/btn";
 @use "./components/card";
 @use "./components/form";
-@use "./components/link";
+@use "./components/nav";
 @use "./components/transaction";
